--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "cream",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "db:generate": "prisma generate",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -20,24 +25,28 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-array": "^3.2.4",
+    "d3-format": "^3.1.2",
     "lucide-react": "^0.468.0",
     "next": "16.1.6",
     "next-auth": "^4.24.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "reactflow": "^11.11.0",
     "recharts": "^2.15.0",
-    "@prisma/client": "^6.9.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
-    "prisma": "^6.9.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "20.17.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "effect": "^3.19.15",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4",
+    "tsx": "^4.19.0",
     "typescript": "^5"
   }
 }
